--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "start:prod": "NODE_ENV=production next start",
+    "lint": "next lint",
+    "test": "echo \"No tests configured\" && exit 0",
+    "docker:build": "docker build -t ai-memory-calculator .",
+    "docker:run": "docker run -p 3000:3000 ai-memory-calculator"
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.2.5",
@@ -33,6 +38,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
