更新演示截图和优化Docker构建
- 使用在线图片链接替换演示截图
- 主界面截图：wuhrai-wordpress.oss-cn-hangzhou.aliyuncs.com/github/vram/vram-1.png
- GPU推荐截图：wuhrai-wordpress.oss-cn-hangzhou.aliyuncs.com/github/vram/vram-2.png
- 优化Dockerfile解决构建卡住问题：
  * 添加国内镜像源加速
  * 设置npm镜像源为npmmirror
  * 增加构建超时时间
  * 添加健康检查
- 移除docker-compose.yml中过时的version声明
- 优化.dockerignore文件减少构建上下文

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,94 @@
 # Dependencies
 node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+.next
+out
+build
+dist
+
+# Environment files
+.env*
+!.env.example
+
+# Development files
+.git
+.gitignore
+README.md
+PUSH_TO_GITHUB.md
+docs/
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Misc
 .pnp
 .pnp.js
 
 # Testing
-coverage
 .nyc_output
 
 # Next.js
@@ -20,9 +104,6 @@ dist
 .idea
 
 # Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 .pnpm-debug.log*
 
 # Local env files
@@ -40,10 +121,6 @@ next-env.d.ts
 Dockerfile
 docker-compose*.yml
 .dockerignore
-
-# Git
-.git
-.gitignore
 
 # Documentation
 docs
