feat: Add Model Context Protocol (MCP) support
🤖 Major Features Added:
- Complete MCP server implementation with 18 resources, 8 tools, and 4 prompts
- Support for VRAM calculation, GPU recommendation, and optimization tools
- AI assistant integration through standardized MCP protocol
- Professional prompt templates for optimization guidance

📚 Resources:
- Model database (130+ models with filtering capabilities)
- GPU specifications (20+ GPUs with intelligent recommendations)
- Calculation formulas documentation
- History tracking and statistics

🔨 Tools:
- GRPO and multimodal VRAM calculations
- Advanced GPU recommendations with cost analysis
- Configuration optimization and auto-tuning
- Batch model comparison

💬 Prompts:
- VRAM optimization suggestions
- GPU selection guidance
- Technical problem diagnosis
- Training configuration optimization

📖 Documentation:
- Updated README.md and README.zh.md with MCP protocol support
- Added comprehensive MCP implementation summary
- Included usage examples and integration guides
- Added test scripts for MCP functionality

🚀 Technical Implementation:
- TypeScript SDK integration (@modelcontextprotocol/sdk)
- Modular architecture with proper error handling
- JSON-RPC 2.0 compliant API endpoints
- Complete logging and monitoring system

This enables AI assistants to directly access professional VRAM calculation capabilities through the standardized Model Context Protocol.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "ai-memory-calculator",
   "version": "0.1.0",
   "private": true,
+  "description": "Professional VRAM requirement calculation tool for Large Language Models and Multimodal Models with MCP protocol support",
+  "keywords": ["vram", "gpu", "llm", "ai", "calculator", "mcp", "model-context-protocol", "memory", "training", "inference"],
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -10,10 +12,12 @@
     "start:prod": "NODE_ENV=production next start",
     "lint": "next lint",
     "test": "echo \"No tests configured\" && exit 0",
+    "test:mcp": "node test-mcp.js",
     "docker:build": "docker build -t ai-memory-calculator .",
     "docker:run": "docker run -p 3000:3000 ai-memory-calculator"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.13.2",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -28,6 +32,7 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
