--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "next lint",
     "test": "echo \"No tests configured\" && exit 0",
     "test:mcp": "node test-mcp.js",
+    "mcp:validate": "node -e \"console.log('MCP SDK version:', require('@modelcontextprotocol/sdk/package.json').version)\"",
+    "install:cn": "npm install --registry=https://registry.npmmirror.com/",
     "docker:build": "docker build -t ai-memory-calculator .",
     "docker:run": "docker run -p 3000:3000 ai-memory-calculator"
   },
