--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: wuhr-ai-vram-insight:latest
-    container_name: wuhr-vram-calculator
+    image: zengchao0215/gpu-calculator:latest
+    container_name: gpu-calculator
     ports:
       - "3000:3000"
     environment:
@@ -27,19 +27,17 @@ services:
           memory: 256M
 
   # 可选：Nginx 反向代理
-  nginx:
-    image: nginx:alpine
-    container_name: wuhr-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-    depends_on:
-      - app
-    restart: unless-stopped
+  # nginx:
+  #   image: nginx:alpine
+  #   container_name: wuhr-nginx
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - ./ssl:/etc/nginx/ssl:ro
+  #   depends_on:
+  #     - app
+  #   restart: unless-stopped
 
-networks:
-  default:
-    name: wuhr-network 
+
